--- a/fine-tune.ipynb
+++ b/fine-tune.ipynb
@@ -45,7 +45,7 @@
     "# 1. ENVIRONMENT & SETUP\n",
     "# ------------------------------------------------------------\n",
     "os.environ[\"HF_DATASETS_CACHE\"] = \"None\"\n",
-    "login(token=\"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\", add_to_git_credential=True)\n",
+    "login(token=\"HF_TOKEN\", add_to_git_credential=True)\n",
     "\n",
     "model_name_or_path = \"openai/whisper-large-v3\"\n",
     "task = \"transcribe\"\n",
